adding main.js and package updates for local app

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "1.0.0",
     "description": "Side-by-side comparisons of LLM performance",
     "repository": "github:PAIR-code/llm-comparator",
-    "main": "client/index.ts",
+    "main": "electron-main.js",
     "scripts": {
         "build": "node build.mjs",
         "publish": "npm run build && npm run publish:python && npm run publish:website",
@@ -21,10 +21,13 @@
         "jsdifflib": "1.1.0",
         "jstat": "1.9.6",
         "lit": "3.1.3",
-        "mobx": "6.12.3"
+        "mobx": "6.12.3",
+        "typescript": "^5.7.3"
     },
     "devDependencies": {
         "@web/dev-server": "0.4.4",
+        "electron": "^34.1.1",
+        "electron-packager": "^17.1.2",
         "esbuild": "0.20.2",
         "esbuild-plugin-lit-css": "3.0.0"
     }
